<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">



    <Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purpal"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_to_your_account"
            android:layout_gravity="center_horizontal"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/login_gmailEdt"
            android:layout_width="match_parent"
            android:paddingLeft="2dp"
            android:layout_marginTop="20dp"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:hint="@string/gmail"/>

        <EditText
            android:id="@+id/login_passwordEdt"
            android:layout_width="match_parent"
            android:paddingLeft="2dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <Button
            android:id="@+id/login_accountBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@color/purpal"
            android:layout_marginTop="15dp"
            android:text="@string/login"/>


    </LinearLayout>

</RelativeLayout>